[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unused = "allow"

[dependencies]
backtrace = "0.3"
bincode = "1.3"
byteorder = "1"
#env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]

[dev-dependencies]
#env_logger = "0.9"
tempfile = "3.0"
